--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -5,5 +5,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 #RewriteRule post/(.*) /content.php/$1 [L] 
 RewriteCond  %{REQUEST_URI} !controller.php
 RewriteCond  %{REQUEST_URI} !/css
+RewriteCond  %{REQUEST_URI} !/images
 RewriteCond  %{REQUEST_URI} !/resources
 RewriteRule (.*) /controller.php/$1 [L] 
