--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -7,4 +7,5 @@ RewriteCond  %{REQUEST_URI} !controller.php
 RewriteCond  %{REQUEST_URI} !/css
 RewriteCond  %{REQUEST_URI} !/images
 RewriteCond  %{REQUEST_URI} !/resources
+RewriteCond  %{REQUEST_URI} !/robots.txt
 RewriteRule (.*) /controller.php/$1 [L] 
